# ai-translation-helper-601

./: README.md  pyproject.toml  requirements.txt
src/: main.py
